--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,108 @@
+anytree==2.8.0
+appdirs==1.4.4
+apsw==3.36.0.post1
+arandr==0.1.10
 asgiref==3.5.0
-Django==4.0.4
-psycopg2==2.9.3
+Beaker==1.11.0
+beautifulsoup4==4.10.0
+brotlicffi==1.0.9.2
+btrfsutil==5.16.2
+CacheControl==0.12.6
+cairocffi==1.3.0
+cchardet==2.1.7
+certifi==2021.10.8
+cffi==1.15.0
+chardet==4.0.0
+colorama==0.4.4
+contextlib2==0.6.0.post1
+cryptography==36.0.2
+css-parser==1.0.6
+cssselect==1.1.0
+defusedxml==0.7.1
+distlib==0.3.4
+distro==1.7.0
+Django==4.0.3
+django-allauth==0.49.0
+django-crispy-forms==1.14.0
+dnspython==2.2.0
+docopt==0.6.2
+docutils==0.16
+feedparser==6.0.3
+filelock==3.4.2
+html2text==2020.1.16
+html5-parser==0.4.10
+html5lib==1.1
+idna==3.3
+ifaddr==0.1.7
+importlib-metadata==4.8.1
+jeepney==0.7.1
+keyutils==0.6
+lensfun==0.3.3
+lit==13.0.1.dev0
+louis==3.21.0
+lxml==4.8.0
+Mako==1.1.6
+mallard-ducktype==1.0.2
+Markdown==3.3.6
+MarkupSafe==2.1.1
+mechanize==0.4.6
+more-itertools==8.10.0
+msgpack==1.0.3
+multivolumefile==0.2.3
+netifaces==0.11.0
+numpy==1.22.3
+oauthlib==3.2.0
+ordered-set==4.0.2
+packaging==20.9
+pep517==0.12.0
+Pillow==9.1.0
+pipenv==2022.4.8
+platformdirs==2.5.0
+ply==3.11
+progress==1.6
+psutil==5.9.0
+py7zr==0.18.3
+pycairo==1.21.0
+pychm==0.8.6
+pycparser==2.21
+pycryptodomex==3.12.0
+Pygments==2.11.2
+PyGObject==3.42.1
+PyJWT==2.3.0
+pyOpenSSL==22.0.0
+pyparsing==3.0.8
+pyppmd==0.18.2
+PyQt5==5.15.6
+PyQt5-sip==12.10.1
+PyQtWebEngine==5.15.5
+python-dateutil==2.8.2
+python3-openid==3.2.0
+pytz==2022.1
+PyYAML==6.0
+pyzstd==0.15.2
+qtile==0.21.0
+Reflector==2021.11.20.2.41.3
+regex==2021.11.10
+requests==2.27.1
+requests-oauthlib==1.3.1
+resolvelib==0.5.5
+retrying==1.3.3
+setproctitle==1.2.3
+sgmllib3k==1.0.0
+six==1.16.0
+soupsieve==2.3.1
 sqlparse==0.4.2
+team==1.0
+texttable==1.6.4
+toml==0.10.2
+tomli==2.0.1
+udiskie==2.4.2
+unrardll==0.1.5
+urllib3==1.26.9
+virtualenv==20.11.0
+virtualenv-clone==0.5.7
+webencodings==0.5.1
+xcffib==0.11.1
+zeroconf==0.38.4
+zipfile-deflate64==0.2.0
+zipp==3.8.0
