--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,38 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django-allauth = "*"
+django-allauth = "==0.50.0"
+asgiref = "==3.5.0"
+"backports.zoneinfo" = "==0.2.1"
+certifi = "==2021.10.8"
+cffi = "==1.15.0"
+charset-normalizer = "==2.0.12"
+click = "==8.1.3"
+colorama = "==0.4.4"
+crispy-bootstrap5 = "==0.6"
+cryptography = "==36.0.2"
+defusedxml = "==0.7.1"
+django = "==4.0.4"
+django-autoslug = "==1.9.8"
+django-crispy-forms = "==1.14.0"
+djlint = "==1.0.2"
+idna = "==3.3"
+importlib-metadata = "==4.11.3"
+oauthlib = "==3.2.0"
+pathspec = "==0.9.0"
+psycopg2-binary = "==2.9.3"
+pycparser = "==2.21"
+pyjwt = "==2.3.0"
+python3-openid = "==3.2.0"
+pyyaml = "==6.0"
+regex = "==2022.4.24"
+requests = "==2.27.1"
+requests-oauthlib = "==1.3.1"
+sqlparse = "==0.4.2"
+tomli = "==2.0.1"
+tqdm = "==4.64.0"
+urllib3 = "==1.26.9"
+zipp = "==3.8.0"
 
 [dev-packages]
 
